# rust_central_api_key_generator

./: .gitignore  Cargo.toml  Dockerfile  README.md  build_docker.sh  diesel_migrate.sh  push_azure_registry.sh  run_docker_bash.sh
cert_db/: convert_cert.sh
migrations/2022-11-17-102451_api_key_gens/: down.sql  up.sql
src/: main.rs  schema.rs
src/apis/: apis.rs  mod.rs  page_home.rs  page_login.rs
src/db/: db_service.rs
src/models/: api_key_info.rs  app_info.rs  mod.rs  web_data_state.rs
src/webs/: mod.rs  page_handlers.rs  web_render.rs
static/: index.html  login-basic.html  register-basic.html
