[package]
name = "rust_central_api_key_generator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.2"
env_logger = "0.9"
log = "0.4"
handlebars = { version = "4.2", features = ["dir_source"] }
serde = { version = "1.0" , features = ["derive"]}
serde_derive = "1.0"
serde_json = "1.0"

