[package]
name = "rust_central_api_key_generator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "web_api_key"
path = "src/main.rs"


[dependencies]
actix-web = "4"
actix-files = "0.6"
actix-web-opentelemetry = "0.13"
handlebars = { version = "4.2", features = ["dir_source"] }

env_logger = "0.9"
log = "0.4"

serde = { version = "1.0" , features = ["derive"]}
serde_derive = "1.0"
serde_json = "1.0"

openssl = { version = "0.10", features = ["vendored"] }
opentelemetry = { version = "0.18", features = ["rt-tokio"]}
opentelemetry-application-insights = { version = "0.23" , features = ["reqwest-client"]}
reqwest = "0.11"

azure_security_keyvault = "0.6"
azure_identity = "0.7"
azure_core = "0.6"

rand = "0.8"


diesel = { version = "2.0", features = ["mysql", "chrono","r2d2","numeric"] }
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
r2d2 = "0.8"
